# nxml

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
apps/nxml-autopilot/: README.md  pyproject.toml
apps/nxml-autopilot/src/nxml_autopilot/: cli.py  mash.py  recording.py  runner.py  triggers.py  web.py
apps/nxml-autopilot/src/nxml_autopilot/static/: index.html
apps/nxml-collect/: README.md  pyproject.toml
apps/nxml-collect/src/nxml_collect/: __init__.py  cli.py  recorder.py  ui.py
apps/nxml-collect/src/nxml_collect/static/: index.html
apps/nxml-coplay/: README.md  pyproject.toml
apps/nxml-coplay/src/nxml_coplay/: cli.py  recording.py  runner.py  triggers.py  web.py
apps/nxml-coplay/src/nxml_coplay/static/: index.html
configs/bc/: seq300_transformer.yaml
configs/ppo/: escape_seeds.yaml  escape_seeds_v3a_warmstart.yaml
configs/wm/: wm_dit_v1_tiny.yaml  wm_dit_v1_za.yaml  wm_fa_dit_za.yaml
tests/fixtures/: tiny_episode.npz
tests/integration/: conftest.py  test_cli_smoke.py  test_clients.py  test_http_transport.py  test_ui_smoke.py  test_zmq_transport.py
tests/nx_macros/: test_player.py  test_recorder.py  test_schema.py  test_store.py
tests/nx_packets/: test_action_spec.py
tests/nxml_mux/: test_web_gamepad_reader.py
tools/: latents_parquet_to_npz.py
