[project]
name = "nxml-collect"
version = "0.1.0"
description = "Passive episode recording: human plays via nxbt-orchestrator, frames+actions written to .npz"
requires-python = ">=3.14"
authors = [{ name = "Clark Saben" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "nxml-capture",
]

[project.urls]
Repository = "https://github.com/csaben/nxml"
Issues = "https://github.com/csaben/nxml/issues"

[project.scripts]
nxml-collect = "nxml_collect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nxml_collect"]

[tool.hatch.build.targets.wheel.force-include]
"src/nxml_collect/static/index.html" = "nxml_collect/static/index.html"

[tool.uv.sources]
nxml-capture = { workspace = true }
